# TelU-FinalProject-DiffuseKronA-KecerdasanBuatanGeneratifPadaVisiKomputer

./: .gitignore  README.md  note.md  pyproject.toml
DiffuseKronA/: pyproject.toml
DiffuseKronA/diffusekrona/: inference_sdxl.py
DiffuseKronA/diffusekrona/scripts/: finetune_sdxl.sh  inference_sdxl.sh
HuggingFace_Diffuser/: train_and_inference_lora_krona_v2.ipynb
diffusekrona/: finetune_inference_grid_experiments.ipynb  finetune_inference_grid_experiments.py  inference_sd.py  inference_sdxl.py
diffusekrona/scripts/: finetune_sd.sh  finetune_sdxl.sh  inference_sd.sh  inference_sdxl.sh
