[project]
name = "diffusekrona"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=0.16.0",
    "accelerator>=2025.11.11",
    "bitsandbytes>=0.40.0",
    "clip",
    "diffusers==0.21.0",
    "ftfy>=6.3.1",
    "huggingface-hub<0.25.0",
    "jinja2>=3.1.6",
    "omegaconf>=2.3.0",
    "pandas>=3.0.3",
    "regex>=2026.5.9",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=4.25.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
